--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
- "repository": {
+  "repository": {
     "type": "git",
     "url": "https://github.com/sikuli/dmt"
-  },  
+  },
   "bin": {
     "dmt": "./bin/dmt"
-  },  
+  },
   "author": "Ian Char, Tom Yeh",
   "license": "ISC",
   "dependencies": {
-    "commander": "^2.6.0"
+    "commander": "^2.6.0",
+    "download-status": "~2.1.1"
   }
 }
