--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.6.0",
-    "download-status": "~2.1.1"
+    "download-status": "~2.1.1",
+    "download": "~4.0.1"
   }
 }
